fixed spacing on navbar anchors

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,10 @@ p, h2, li, a{
         0 0 0px rgb(111, 0, 255);
 }
 
+a{
+    padding: 10px;
+}
+
 .info-image{
     width: 300px;
     height: 300px;
